--- a/notebook.Rmd
+++ b/notebook.Rmd
@@ -5,9 +5,9 @@ output:
 ---
 
 ## 1. Breath alcohol tests in Ames, Iowa, USA
-<p>Ames, Iowa, USA is the home of Iowa State University, a land grant university with over 36,000 students. By comparison, the city of Ames, Iowa, itself only has about 65,000 residents. As with any other college town, Ames has had its fair share of alcohol-related incidents. (For example, Google 'VEISHEA riots 2014'.) We will take a look at some breath alcohol test data from Ames that is published by the State of Iowa.</p>
-<p><img style="width:500px" src="https://s3.amazonaws.com/assets.datacamp.com/production/project_208/img/usa.jpg"> </p>
-<p>The data file 'breath_alcohol_ames.csv' contains 1,556 readings from breath alcohol tests administered by the Ames and Iowa State University Police Departments from January 2013 to December 2017. The columns in this data set are year, month, day, hour, location, gender, Res1, Res2.</p>
+Ames, Iowa, USA is the home of Iowa State University, a land grant university with over 36,000 students. By comparison, the city of Ames, Iowa, itself only has about 65,000 residents. As with any other college town, Ames has had its fair share of alcohol-related incidents. (For example, Google 'VEISHEA riots 2014'.) We will take a look at some breath alcohol test data from Ames that is published by the State of Iowa.
+
+The data file 'breath_alcohol_ames.csv' contains 1,556 readings from breath alcohol tests administered by the Ames and Iowa State University Police Departments from January 2013 to December 2017. The columns in this data set are year, month, day, hour, location, gender, Res1, Res2.
 
 
 ```R
@@ -47,105 +47,8 @@ summarise( n =n())
 
 
 
-<table>
-<thead><tr><th scope=col>year</th><th scope=col>month</th><th scope=col>day</th><th scope=col>hour</th><th scope=col>location</th><th scope=col>gender</th><th scope=col>Res1</th><th scope=col>Res2</th></tr></thead>
-<tbody>
-	<tr><td>2017   </td><td>12     </td><td>17     </td><td>1      </td><td>Ames PD</td><td>M      </td><td>0.046  </td><td>0.046  </td></tr>
-	<tr><td>2017   </td><td>12     </td><td>14     </td><td>3      </td><td>ISU PD </td><td>F      </td><td>0.121  </td><td>0.120  </td></tr>
-	<tr><td>2017   </td><td>12     </td><td>10     </td><td>5      </td><td>ISU PD </td><td>F      </td><td>0.068  </td><td>0.067  </td></tr>
-	<tr><td>2017   </td><td>12     </td><td>10     </td><td>3      </td><td>ISU PD </td><td>F      </td><td>0.077  </td><td>0.077  </td></tr>
-	<tr><td>2017   </td><td>12     </td><td> 9     </td><td>2      </td><td>ISU PD </td><td>M      </td><td>0.085  </td><td>0.084  </td></tr>
-	<tr><td>2017   </td><td>12     </td><td> 9     </td><td>1      </td><td>Ames PD</td><td>M      </td><td>0.160  </td><td>0.161  </td></tr>
-</tbody>
-</table>
-
-
-
-
-```R
-# These packages need to be loaded in the first `@tests` cell. 
-library(testthat) 
-library(IRkernel.testthat)
-
-library(tidyverse)
-
-run_tests({
-    correct_ba_data <- read_csv("datasets/breath_alcohol_ames.csv")
-    correct_count_data <- ba_data %>% count(year)
-    test_that("read_csv is used", {
-        expect_true("tbl_df" %in% class(ba_data),
-                    info = "Use read_csv (with an underscore) to read in datasets/breath_alcohol_ames.csv")
-    })
-    test_that("ba_data is read in correctly", {
-        expect_equal(correct_ba_data, ba_data,
-                     info = "ba_data should contain the data in datasets/breath_alcohol_ames.csv")
-    })
-    test_that("ba_year is created correctly", {
-        expect_equal(correct_count_data, ba_year, 
-                     info = "ba_year should be a tbl.df with 5 rows and 2 columns called year and n")
-    })
-})
-```
-
-    
-    Attaching package: 'testthat'
-    
-    The following object is masked from 'package:dplyr':
-    
-        matches
-    
-    The following object is masked from 'package:purrr':
-    
-        is_null
-    
-    Parsed with column specification:
-    cols(
-      year = col_integer(),
-      month = col_integer(),
-      day = col_integer(),
-      hour = col_integer(),
-      location = col_character(),
-      gender = col_character(),
-      Res1 = col_double(),
-      Res2 = col_double()
-    )
-
-
-
-
-
-    <ProjectReporter>
-      Inherits from: <ListReporter>
-      Public:
-        .context: NULL
-        .end_context: function (context) 
-        .start_context: function (context) 
-        add_result: function (context, test, result) 
-        all_tests: environment
-        cat_line: function (...) 
-        cat_tight: function (...) 
-        clone: function (deep = FALSE) 
-        current_expectations: environment
-        current_file: some name
-        current_start_time: 1.698 0.089 49.611 0.004 0
-        dump_test: function (test) 
-        end_context: function (context) 
-        end_reporter: function () 
-        end_test: function (context, test) 
-        get_results: function () 
-        initialize: function (...) 
-        is_full: function () 
-        out: 3
-        results: environment
-        rule: function (...) 
-        start_context: function (context) 
-        start_file: function (name) 
-        start_reporter: function () 
-        start_test: function (context, test) 
-
-
 ## 2. What is the busiest police department in Ames?
-<p>There are two police departments in the data set: the Iowa State University Police Department and the Ames Police Department. Which one administers more breathalyzer tests? </p>
+There are two police departments in the data set: the Iowa State University Police Department and the Ames Police Department. Which one administers more breathalyzer tests? 
 
 
 ```R
@@ -156,65 +59,8 @@ summarise( n =n())
 pds
 ```
 
-
-<table>
-<thead><tr><th scope=col>location</th><th scope=col>n</th></tr></thead>
-<tbody>
-	<tr><td>Ames PD</td><td>616    </td></tr>
-	<tr><td>ISU PD </td><td>940    </td></tr>
-</tbody>
-</table>
-
-
-
-
-```R
-run_tests({
-    correct_pds_data <- ba_data %>% count(location)
-    test_that("pds data is correct", {
-        expect_equal(correct_pds_data, pds,
-                     info = "Count by the location variable to get one column named location and one column named n. There should be 2 rows.")
-    })
-})
-```
-
-
-
-
-    <ProjectReporter>
-      Inherits from: <ListReporter>
-      Public:
-        .context: NULL
-        .end_context: function (context) 
-        .start_context: function (context) 
-        add_result: function (context, test, result) 
-        all_tests: environment
-        cat_line: function (...) 
-        cat_tight: function (...) 
-        clone: function (deep = FALSE) 
-        current_expectations: environment
-        current_file: some name
-        current_start_time: 1.761 0.089 49.674 0.004 0
-        dump_test: function (test) 
-        end_context: function (context) 
-        end_reporter: function () 
-        end_test: function (context, test) 
-        get_results: function () 
-        initialize: function (...) 
-        is_full: function () 
-        out: 3
-        results: environment
-        rule: function (...) 
-        start_context: function (context) 
-        start_file: function (name) 
-        start_reporter: function () 
-        start_test: function (context, test) 
-
-
 ## 3. Nothing Good Happens after 2am
-<p><img src="https://s3.amazonaws.com/assets.datacamp.com/production/project_208/img/himym02.jpg" style="float: left;margin:5px 20px 5px 1px;width:300px"></p>
-<p>We all know that "nothing good happens after 2am." Thus, there are inevitably some times of the day when breath alcohol tests, especially in a college town like Ames, are most and least common. Which hours of the day have the most and least breathalyzer tests?  </p>
-
+We all know that "nothing good happens after 2am." Thus, there are inevitably some times of the day when breath alcohol tests, especially in a college town like Ames, are most and least common. Which hours of the day have the most and least breathalyzer tests? 
 
 ```R
 # count by hour and arrange by descending frequency
@@ -227,101 +73,8 @@ hourly
 ggplot(hourly, aes(x= hour, weight =n)) + geom_bar()
 ```
 
-
-<table>
-<thead><tr><th scope=col>hour</th><th scope=col>n</th></tr></thead>
-<tbody>
-	<tr><td> 2 </td><td>417</td></tr>
-	<tr><td> 3 </td><td>364</td></tr>
-	<tr><td> 1 </td><td>219</td></tr>
-	<tr><td> 4 </td><td>124</td></tr>
-	<tr><td> 0 </td><td> 98</td></tr>
-	<tr><td>23 </td><td> 51</td></tr>
-	<tr><td> 5 </td><td> 48</td></tr>
-	<tr><td>20 </td><td> 31</td></tr>
-	<tr><td>22 </td><td> 29</td></tr>
-	<tr><td>21 </td><td> 26</td></tr>
-	<tr><td>19 </td><td> 24</td></tr>
-	<tr><td>18 </td><td> 22</td></tr>
-	<tr><td>17 </td><td> 14</td></tr>
-	<tr><td>10 </td><td> 13</td></tr>
-	<tr><td>16 </td><td> 13</td></tr>
-	<tr><td>12 </td><td> 12</td></tr>
-	<tr><td>15 </td><td> 12</td></tr>
-	<tr><td> 6 </td><td>  8</td></tr>
-	<tr><td>13 </td><td>  7</td></tr>
-	<tr><td> 8 </td><td>  6</td></tr>
-	<tr><td>11 </td><td>  6</td></tr>
-	<tr><td> 7 </td><td>  5</td></tr>
-	<tr><td> 9 </td><td>  5</td></tr>
-	<tr><td>14 </td><td>  2</td></tr>
-</tbody>
-</table>
-
-
-
-
-
-
-![png](output_7_2.png)
-
-
-
-```R
-# one or more tests of the students code. 
-# The @solution should pass the tests.
-# The purpose of the tests is to try to catch common errors and to 
-# give the student a hint on how to resolve these errors.
-run_tests({
-    correct_hour_data <- ba_data %>% count(hour) %>% arrange(desc(n))
-    test_that("hourly data is correct", {
-        expect_equal(correct_hour_data, hourly,
-                     info = "The object hourly should have 24 rows and 2 columns, called hour and n. The first row should contain the largest n value, and the last row should contain the smallest n value.")
-    })
-    test_that("plot is a bar chart",{
-        p <- last_plot()
-        q <- p$layers[[1]]
-        expect_is(q$geom, "GeomBar", 
-                  info = "You should plot a bar chart with hour on the x-axis and count ('n') on the y-axis.")
-    })
-})
-```
-
-
-
-
-    <ProjectReporter>
-      Inherits from: <ListReporter>
-      Public:
-        .context: NULL
-        .end_context: function (context) 
-        .start_context: function (context) 
-        add_result: function (context, test, result) 
-        all_tests: environment
-        cat_line: function (...) 
-        cat_tight: function (...) 
-        clone: function (deep = FALSE) 
-        current_expectations: environment
-        current_file: some name
-        current_start_time: 2.484 0.104 50.416 0.004 0
-        dump_test: function (test) 
-        end_context: function (context) 
-        end_reporter: function () 
-        end_test: function (context, test) 
-        get_results: function () 
-        initialize: function (...) 
-        is_full: function () 
-        out: 3
-        results: environment
-        rule: function (...) 
-        start_context: function (context) 
-        start_file: function (name) 
-        start_reporter: function () 
-        start_test: function (context, test) 
-
-
 ## 4. Breathalyzer tests by month
-<p>Now that we have discovered which time of day is most common for breath alcohol tests, we will determine which time of the year has the most breathalyzer tests. Which month will have the most recorded tests?</p>
+Now that we have discovered which time of day is most common for breath alcohol tests, we will determine which time of the year has the most breathalyzer tests. Which month will have the most recorded tests?
 
 
 ```R
@@ -339,67 +92,8 @@ ggplot(monthly, aes(month, weight=n)) + geom_bar()
 
 
 
-
-![png](output_10_1.png)
-
-
-
-```R
-# one or more tests of the students code. 
-# The @solution should pass the tests.
-# The purpose of the tests is to try to catch common errors and to 
-# give the student a hint on how to resolve these errors.
-run_tests({
-    correct_month_data <- ba_data %>% count(month) %>% arrange(desc(n)) %>% ungroup() %>% mutate(month = as.factor(month))
-    test_that("monthly data is correct", {
-        expect_equal(correct_month_data, monthly,
-                     info = "The object monthly should have 12 rows and 2 columns, called month and n. The first row should contain the largest n value, and the last row should contain the smallest n value.")
-    })
-    test_that("plot is a bar chart",{
-        p <- last_plot()
-        q <- p$layers[[1]]
-        expect_is(q$geom, "GeomBar", 
-                  info = "You should plot a bar chart with month on the x-axis and count ('n') on the y-axis.")
-    })
-})
-```
-
-
-
-
-    <ProjectReporter>
-      Inherits from: <ListReporter>
-      Public:
-        .context: NULL
-        .end_context: function (context) 
-        .start_context: function (context) 
-        add_result: function (context, test, result) 
-        all_tests: environment
-        cat_line: function (...) 
-        cat_tight: function (...) 
-        clone: function (deep = FALSE) 
-        current_expectations: environment
-        current_file: some name
-        current_start_time: 3.155 0.112 51.095 0.004 0
-        dump_test: function (test) 
-        end_context: function (context) 
-        end_reporter: function () 
-        end_test: function (context, test) 
-        get_results: function () 
-        initialize: function (...) 
-        is_full: function () 
-        out: 3
-        results: environment
-        rule: function (...) 
-        start_context: function (context) 
-        start_file: function (name) 
-        start_reporter: function () 
-        start_test: function (context, test) 
-
-
 ## 5. COLLEGE
-<p><img src="https://s3.amazonaws.com/assets.datacamp.com/production/project_208/img/PF2081John-Belushi-College-Posters.jpg" style="float: left;margin:5px 20px 5px 1px"> </p>
-<p>When we think of (binge) drinking in college towns in America, we usually think of something like this image at the left. And so, one might suspect that breath alcohol tests are given to men more often than women and that men drink more than women. </p>
+When we think of (binge) drinking in college towns in America, we usually think of something like this image at the left. And so, one might suspect that breath alcohol tests are given to men more often than women and that men drink more than women.
 
 
 ```R
@@ -424,111 +118,8 @@ head(mean_bas,4)
 ggplot(mean_bas, aes(gender,meanRes)) + geom_boxplot()
 ```
 
-
-<table>
-<thead><tr><th scope=col>gender</th><th scope=col>n</th></tr></thead>
-<tbody>
-	<tr><td>M   </td><td>1102</td></tr>
-	<tr><td>F   </td><td> 425</td></tr>
-	<tr><td>NA  </td><td>  29</td></tr>
-</tbody>
-</table>
-
-
-
-
-<table>
-<thead><tr><th scope=col>year</th><th scope=col>month</th><th scope=col>day</th><th scope=col>hour</th><th scope=col>location</th><th scope=col>gender</th><th scope=col>Res1</th><th scope=col>Res2</th></tr></thead>
-<tbody>
-	<tr><td>2017   </td><td>12     </td><td>17     </td><td>1      </td><td>Ames PD</td><td>M      </td><td>0.046  </td><td>0.046  </td></tr>
-	<tr><td>2017   </td><td>12     </td><td>14     </td><td>3      </td><td>ISU PD </td><td>F      </td><td>0.121  </td><td>0.120  </td></tr>
-</tbody>
-</table>
-
-
-
-
-<table>
-<thead><tr><th scope=col>year</th><th scope=col>month</th><th scope=col>day</th><th scope=col>hour</th><th scope=col>location</th><th scope=col>gender</th><th scope=col>Res1</th><th scope=col>Res2</th><th scope=col>meanRes</th></tr></thead>
-<tbody>
-	<tr><td>2017   </td><td>12     </td><td>17     </td><td>1      </td><td>Ames PD</td><td>M      </td><td>0.046  </td><td>0.046  </td><td>0.0460 </td></tr>
-	<tr><td>2017   </td><td>12     </td><td>14     </td><td>3      </td><td>ISU PD </td><td>F      </td><td>0.121  </td><td>0.120  </td><td>0.1205 </td></tr>
-	<tr><td>2017   </td><td>12     </td><td>10     </td><td>5      </td><td>ISU PD </td><td>F      </td><td>0.068  </td><td>0.067  </td><td>0.0675 </td></tr>
-	<tr><td>2017   </td><td>12     </td><td>10     </td><td>3      </td><td>ISU PD </td><td>F      </td><td>0.077  </td><td>0.077  </td><td>0.0770 </td></tr>
-</tbody>
-</table>
-
-
-
-
-
-
-![png](output_13_4.png)
-
-
-
-```R
-# one or more tests of the students code. 
-# The @solution should pass the tests.
-# The purpose of the tests is to try to catch common errors and to 
-# give the student a hint on how to resolve these errors.
-run_tests({
-    correct_clean_gender <- ba_data %>% filter(!is.na(gender))
-    correct_meanbas <- clean_gender %>% mutate(meanRes = (Res1 + Res2)/2)
-    test_that("clean_gender is correct", {
-        expect_equal(clean_gender, correct_clean_gender,
-                     info = "Use filter and !is.na().")
-    })
-    test_that("mean_bas is correct", {
-        expect_equal(mean_bas, correct_meanbas,
-                     info = "Try creating the mean column with mutate(meanRes = (col1 + col2)/2) in the clean_gender data.")
-    }) 
-    test_that("plot is a boxplot",{
-        p <- last_plot()
-        q <- p$layers[[1]]
-        expect_is(q$geom, "GeomBoxplot", 
-                  info = "You should plot a boxplot with gender on the x-axis and meanRes on the y-axis.")
-    })
-
-  # You can have more than one test
-})
-```
-
-
-
-
-    <ProjectReporter>
-      Inherits from: <ListReporter>
-      Public:
-        .context: NULL
-        .end_context: function (context) 
-        .start_context: function (context) 
-        add_result: function (context, test, result) 
-        all_tests: environment
-        cat_line: function (...) 
-        cat_tight: function (...) 
-        clone: function (deep = FALSE) 
-        current_expectations: environment
-        current_file: some name
-        current_start_time: 3.669 0.112 51.607 0.004 0
-        dump_test: function (test) 
-        end_context: function (context) 
-        end_reporter: function () 
-        end_test: function (context, test) 
-        get_results: function () 
-        initialize: function (...) 
-        is_full: function () 
-        out: 3
-        results: environment
-        rule: function (...) 
-        start_context: function (context) 
-        start_file: function (name) 
-        start_reporter: function () 
-        start_test: function (context, test) 
-
-
 ## 6. Above the legal limit
-<p>In the USA, it is illegal to drive with a blood alcohol concentration (BAC) above 0.08%. This is the case for <a href="https://www.dmv.org/automotive-law/dui.php">all 50 states</a>. Assuming everyone tested in our data was driving (though we have no way of knowing this from the data), if either of the results (<code>Res1</code>, <code>Res2</code>) are above 0.08, the person would be charged with DUI (driving under the influence). </p>
+In the USA, it is illegal to drive with a blood alcohol concentration (BAC) above 0.08%. This is the case for all 50 states. Assuming everyone tested in our data was driving (though we have no way of knowing this from the data), if either of the results (Res1,Res2) are above 0.08, the person would be charged with DUI (driving under the influence).
 
 
 ```R
@@ -545,61 +136,8 @@ round(p_dui,3)
 0.745
 
 
-
-```R
-# one or more tests of the students code. 
-# The @solution should pass the tests.
-# The purpose of the tests is to try to catch common errors and to 
-# give the student a hint on how to resolve these errors.
-run_tests({
-    correct_duis <- ba_data %>% filter(Res1 > 0.08 | Res2 > 0.08)
-    p_correct <- nrow(correct_duis)/nrow(ba_data)
-    test_that("duis is correct", {
-        expect_equivalent(duis, correct_duis, 
-                          info = "Make sure you included Res1 and Res2 values that are greater than 0.08.")
-    })
-    test_that("p is correct", {
-        expect_equivalent(p_dui, p_correct, 
-                          info = "The proportion should be the number of rows in duis divided by the number of rows in ba_data.")
-    })
-})
-```
-
-
-
-
-    <ProjectReporter>
-      Inherits from: <ListReporter>
-      Public:
-        .context: NULL
-        .end_context: function (context) 
-        .start_context: function (context) 
-        add_result: function (context, test, result) 
-        all_tests: environment
-        cat_line: function (...) 
-        cat_tight: function (...) 
-        clone: function (deep = FALSE) 
-        current_expectations: environment
-        current_file: some name
-        current_start_time: 3.733 0.116 51.674 0.004 0
-        dump_test: function (test) 
-        end_context: function (context) 
-        end_reporter: function () 
-        end_test: function (context, test) 
-        get_results: function () 
-        initialize: function (...) 
-        is_full: function () 
-        out: 3
-        results: environment
-        rule: function (...) 
-        start_context: function (context) 
-        start_file: function (name) 
-        start_reporter: function () 
-        start_test: function (context, test) 
-
-
 ## 7. Breathalyzer tests: is there a pattern over time?
-<p>We previously saw that 2am is the most common time of day for breathalyzer tests to be administered, and August is the most common month of the year for breathalyzer tests. Now, we look at the weeks in the year over time. We briefly use the <a href="http://lubridate.tidyverse.org/"><code>lubridate</code></a> package for a bit of date-time manipulation. </p>
+We previously saw that 2am is the most common time of day for breathalyzer tests to be administered, and August is the most common month of the year for breathalyzer tests. Now, we look at the weeks in the year over time. We briefly use the lubridate package for a bit of date-time manipulation.
 
 
 ```R
@@ -613,89 +151,8 @@ ba_data%>% head(2)
 ba_data <- ba_data %>% mutate(week = week(date))
 ba_data%>% head(2)
 ```
-
-    
-    Attaching package: 'lubridate'
-    
-    The following object is masked from 'package:base':
-    
-        date
-    
-
-
-
-<table>
-<thead><tr><th scope=col>year</th><th scope=col>month</th><th scope=col>day</th><th scope=col>hour</th><th scope=col>location</th><th scope=col>gender</th><th scope=col>Res1</th><th scope=col>Res2</th><th scope=col>date</th></tr></thead>
-<tbody>
-	<tr><td>2017      </td><td>12        </td><td>17        </td><td>1         </td><td>Ames PD   </td><td>M         </td><td>0.046     </td><td>0.046     </td><td>2017-12-17</td></tr>
-	<tr><td>2017      </td><td>12        </td><td>14        </td><td>3         </td><td>ISU PD    </td><td>F         </td><td>0.121     </td><td>0.120     </td><td>2017-12-14</td></tr>
-</tbody>
-</table>
-
-
-
-
-<table>
-<thead><tr><th scope=col>year</th><th scope=col>month</th><th scope=col>day</th><th scope=col>hour</th><th scope=col>location</th><th scope=col>gender</th><th scope=col>Res1</th><th scope=col>Res2</th><th scope=col>date</th><th scope=col>week</th></tr></thead>
-<tbody>
-	<tr><td>2017      </td><td>12        </td><td>17        </td><td>1         </td><td>Ames PD   </td><td>M         </td><td>0.046     </td><td>0.046     </td><td>2017-12-17</td><td>51        </td></tr>
-	<tr><td>2017      </td><td>12        </td><td>14        </td><td>3         </td><td>ISU PD    </td><td>F         </td><td>0.121     </td><td>0.120     </td><td>2017-12-14</td><td>50        </td></tr>
-</tbody>
-</table>
-
-
-
-
-```R
-# one or more tests of the students code. 
-# The @solution should pass the tests.
-# The purpose of the tests is to try to catch common errors and to 
-# give the student a hint on how to resolve these errors.
-run_tests({
-    correct_ba_data <- ba_data %>% mutate(date = ymd(paste(year, month, day, sep = "-")), 
-                                          week = week(date))
-    test_that("ba_data is correct", {
-        expect_equivalent(ba_data, correct_ba_data, 
-                          info = "Did you create two new columns, date (a date variable) and week (a numeric variable)?")
-    })
-})
-```
-
-
-
-
-    <ProjectReporter>
-      Inherits from: <ListReporter>
-      Public:
-        .context: NULL
-        .end_context: function (context) 
-        .start_context: function (context) 
-        add_result: function (context, test, result) 
-        all_tests: environment
-        cat_line: function (...) 
-        cat_tight: function (...) 
-        clone: function (deep = FALSE) 
-        current_expectations: environment
-        current_file: some name
-        current_start_time: 3.935 0.116 51.876 0.004 0
-        dump_test: function (test) 
-        end_context: function (context) 
-        end_reporter: function () 
-        end_test: function (context, test) 
-        get_results: function () 
-        initialize: function (...) 
-        is_full: function () 
-        out: 3
-        results: environment
-        rule: function (...) 
-        start_context: function (context) 
-        start_file: function (name) 
-        start_reporter: function () 
-        start_test: function (context, test) 
-
-
 ## 8. Looking at timelines
-<p>How do the weeks differ over time? One of the most common data visualizations is the time series, a line tracking the changes in a variable over time. We will use the new <code>week</code> variable to look at test frequency over time. We end with a time series plot showing frequency of breathalyzer tests by week in year, with one line for each year. </p>
+How do the weeks differ over time? One of the most common data visualizations is the time series, a line tracking the changes in a variable over time. We will use the new "week" variable to look at test frequency over time. We end with a time series plot showing frequency of breathalyzer tests by week in year, with one line for each year. 
 
 
 ```R
@@ -720,104 +177,12 @@ ggplot(weekly, aes(x = week, y = n)) +
 ```
 
 
-<table>
-<thead><tr><th scope=col>year</th><th scope=col>week</th><th scope=col>n</th></tr></thead>
-<tbody>
-	<tr><td>2013</td><td>1   </td><td> 6  </td></tr>
-	<tr><td>2013</td><td>2   </td><td>12  </td></tr>
-</tbody>
-</table>
-
-
-
-
-<table>
-<thead><tr><th scope=col>year</th><th scope=col>week</th><th scope=col>n</th></tr></thead>
-<tbody>
-	<tr><td>2013</td><td>1   </td><td> 6  </td></tr>
-	<tr><td>2013</td><td>2   </td><td>12  </td></tr>
-</tbody>
-</table>
-
-
-
-
-<table>
-<thead><tr><th scope=col>year</th><th scope=col>week</th><th scope=col>n</th></tr></thead>
-<tbody>
-	<tr><td>2013</td><td>1   </td><td> 6  </td></tr>
-	<tr><td>2013</td><td>2   </td><td>12  </td></tr>
-</tbody>
-</table>
-
-
-
-
-
-
-![png](output_22_4.png)
-
-
-
-```R
-# one or more tests of the students code. 
-# The @solution should pass the tests.
-# The purpose of the tests is to try to catch common errors and to 
-# give the student a hint on how to resolve these errors.
-run_tests({
-    correct_weekly <- ba_data %>% count(week, year) %>% ungroup %>% mutate(year = as.factor(year))
-    test_that("weekly is correct", {
-        expect_equivalent(weekly, correct_weekly,
-                          info = "Did you ungroup the data for the plot?")
-    })
-    test_that("plot is a line plot",{
-        p <- last_plot()
-        q <- p$layers[[1]]
-        expect_is(q$geom, "GeomLine", 
-                  info = "You should plot a line plot with week on the x-axis, count ('n') on the y-axis, and year mapped to color.")
-    })
-
-# You can have more than one test
-})
-```
-
-
-
-
-    <ProjectReporter>
-      Inherits from: <ListReporter>
-      Public:
-        .context: NULL
-        .end_context: function (context) 
-        .start_context: function (context) 
-        add_result: function (context, test, result) 
-        all_tests: environment
-        cat_line: function (...) 
-        cat_tight: function (...) 
-        clone: function (deep = FALSE) 
-        current_expectations: environment
-        current_file: some name
-        current_start_time: 4.437 0.124 52.386 0.004 0
-        dump_test: function (test) 
-        end_context: function (context) 
-        end_reporter: function () 
-        end_test: function (context, test) 
-        get_results: function () 
-        initialize: function (...) 
-        is_full: function () 
-        out: 3
-        results: environment
-        rule: function (...) 
-        start_context: function (context) 
-        start_file: function (name) 
-        start_reporter: function () 
-        start_test: function (context, test) 
 
 
 ## 9. The end of VEISHEA
-<p>From <a href="https://en.wikipedia.org/wiki/VEISHEA">Wikipedia</a>: 
-"VEISHEA was an annual week-long celebration held each spring on the campus of Iowa State University in Ames, Iowa. The celebration featured an annual parade and many open-house demonstrations of the university facilities and departments. Campus organizations exhibited products, technologies, and held fundraisers for various charity groups. In addition, VEISHEA brought speakers, lecturers, and entertainers to Iowa State. [...] VEISHEA was the largest student-run festival in the nation, bringing in tens of thousands of visitors to the campus each year."</p>
-<p>This over 90-year tradition in Ames was <a href="https://www.news.iastate.edu/news/2014/08/07/veisheaend">terminated permanently</a> after <a href="https://www.desmoinesregister.com/story/news/crime-and-courts/2014/04/09/veishea-ames-car-tipping/7495935/">riots in 2014</a>, where drunk celebrators flipped over multiple vehicles and tore light poles down. This was not the first incidence of violence and severe property damage in VEISHEA's history. Did former President Leath make the right decision?</p>
+From Wikipedia: 
+"VEISHEA was an annual week-long celebration held each spring on the campus of Iowa State University in Ames, Iowa. The celebration featured an annual parade and many open-house demonstrations of the university facilities and departments. Campus organizations exhibited products, technologies, and held fundraisers for various charity groups. In addition, VEISHEA brought speakers, lecturers, and entertainers to Iowa State. [...] VEISHEA was the largest student-run festival in the nation, bringing in tens of thousands of visitors to the campus each year."
+This over 90-year tradition in Ames was terminated permanently after riots in 2014, where drunk celebrators flipped over multiple vehicles and tore light poles down. This was not the first incidence of violence and severe property damage in VEISHEA's history. Did former President Leath make the right decision?
 
 
 ```R
@@ -834,56 +199,3 @@ ggplot() +
 ## Make a decision about VEISHEA. TRUE or FALSE?  
 cancelling_VEISHEA_was_right <- FALSE
 ```
-
-
-
-
-![png](output_25_1.png)
-
-
-
-```R
-# one or more tests of the students code. 
-# The @solution should pass the tests.
-# The purpose of the tests is to try to catch common errors and to 
-# give the student a hint on how to resolve these errors.
-run_tests({
-    test_that("decision is made", {
-        expect_true(is.logical(cancelling_VEISHEA_was_right), info = "Did you make a decision about VEISHEA? Assign TRUE or FALSE to the variable cancelling_VEISHEA_was_right.")
-    })
-# You can have more than one test
-})
-```
-
-
-
-
-    <ProjectReporter>
-      Inherits from: <ListReporter>
-      Public:
-        .context: NULL
-        .end_context: function (context) 
-        .start_context: function (context) 
-        add_result: function (context, test, result) 
-        all_tests: environment
-        cat_line: function (...) 
-        cat_tight: function (...) 
-        clone: function (deep = FALSE) 
-        current_expectations: environment
-        current_file: some name
-        current_start_time: 5.189 0.128 53.141 0.004 0
-        dump_test: function (test) 
-        end_context: function (context) 
-        end_reporter: function () 
-        end_test: function (context, test) 
-        get_results: function () 
-        initialize: function (...) 
-        is_full: function () 
-        out: 3
-        results: environment
-        rule: function (...) 
-        start_context: function (context) 
-        start_file: function (name) 
-        start_reporter: function () 
-        start_test: function (context, test) 
-
